[gd_scene load_steps=4 format=3 uid="uid://le6l105vb7cg"]

[ext_resource type="Script" uid="uid://plj0kxmtsxg5" path="res://Scenes/menu.gd" id="1_uubjt"]
[ext_resource type="PackedScene" uid="uid://ch1x0o85ojlt3" path="res://Scenes/world.tscn" id="2_5yleq"]
[ext_resource type="PackedScene" uid="uid://bdrqfqwwo6fly" path="res://Scenes/option_panel.tscn" id="3_ylpcl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uubjt")
gamescene = ExtResource("2_5yleq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 295
theme_override_constants/margin_top = 205
theme_override_constants/margin_right = 315
theme_override_constants/margin_bottom = 130

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="StartBTN" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "start
"

[node name="OptionsBTN" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="OptionPanel" parent="CanvasLayer/MarginContainer" instance=ExtResource("3_ylpcl")]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/MarginContainer/OptionPanel"]
layout_mode = 0
offset_top = 282.0
offset_right = 542.0
offset_bottom = 313.0
text = "Back
"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/StartBTN" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/OptionsBTN" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/OptionPanel/Button" to="." method="_on_option_back_button_pressed"]
